# cbp

./: .svnignore  CMakeLists.txt  CompilerBP.sln  Makefile  README  cbp.cfg  cliffsnotes.txt  main.cpp  main.h  peephole_patterns
CompilerBP/: main.cpp
benchmark/: CMakeLists.txt
benchmark/benchmark/: BenchmarkUtils.h
benchmark/src/: Benchmark.cpp
cbp_main/: CBP_main.c  CBP_main4SDL.c  CMakeLists.txt  Debugging.h  additional_functions.h
codegen/: CMakeLists.txt  ProgramNodes.cpp
codegen/src/: Block.cpp  CodeGen.cpp  DAGIdentifierMap.cpp  DAGNodes.cpp  DirectedAcyclicGraph.cpp  ExprNodes.cpp  ExprNodesDAG.cpp  FunctionNodes.cpp  Message.cpp  Mnemonics.cpp  ProgramNodes.cpp  Variables.cpp
examples/: BitOperations.cbp  CMakeLists.txt  ConstraintSolving.cbp  SwitchCase.cbp  benchmark.cbp  call.cbp  call2.cbp  constantPropergation.cbp  dagtest.cbp  debug.s  error.cbp  first.asm  first.c  function.cbp  function.gdb  inlining.cbp  julia.cbp  julia2.cbp  putchar.cbp  sdl_surface.cbp  sdl_surface_optimizing.cbp  struct.cbp  test.cbp  test_for.cbp  variable.cbp  working.cbp  working2.cbp
include/: AbstractNodes.h  ArrayType.h  Definition.h  ExprNodes.h  FunctionDef.h  ProgramNodes.h  Scope.h  SymbolTable.h  Type.h
include/MsgHandler/: MsgHandler.h
include/benchmark/: Benchmark.h
include/codegen/: CodeGen.h  DAGIdentifierMap.h  DAGNodes.h  DirectedAcyclicGraph.h  Message.h  Mnemonics.h
include/exceptions/: Exceptions.h  InvalidAssignmentException.h  TypeConversionException.h
include/msghandler/: MsgHandler.h
include/nodes/: AbstractNodes.h  ExprNodes.h  ProgramNodes.h  Types.h  Variables.h
include/optimizer/: CommonSubexpressionElimination.h  ConstantPropergation.h  ConstrainedEnvironment.h  ConstraintSolving.h  ExpressionProperties.h  Inlining.h  Intervals.h  Maybe.h  Optimizer.h  Peephole.h
include/parser/: AbstractNodes.h  ExprNodes.h  ProgramNodes.h  Types.h
include/scope/: Scope.h  Type.h
include/symboltable/: ArrayType.h  Definition.h  FunctionDef.h  Scope.h  SimpleType.h  StructType.h  SymbolTable.h  Type.h  VariableDef.h
modules/: FindBison.cmake
msvs2010/: CompilerBP.sln  CompilerBP.vcxproj  CompilerBP.vcxproj.filters  Wichtig.txt  benchmark.bat  compile.bat  prebuild.bat
msvs2010/bison/doc/bison/2.4.1/bison-2.4.1/: bison.html
msvs2010/bison/include/: unistd.h
msvs2010/bison/man/html/: bison.1.html  yacc.1.html  yacc.1p.html
msvs2010/flex/doc/flex/2.5.4a/flex-2.5.4a/: flex.html
msvs2010/flex/include/: FlexLexer.h
msvs2010/ssr/: ReadMe.txt  ssr.cpp  ssr.sln  ssr.vcproj  stdafx.cpp
optimizer/: CMakeLists.txt
optimizer/src/: CommonSubexpressionElimination.cpp  ConstantPropergation.cpp  ConstraintSolving.cpp  ExprNodes.cpp  Inlining.cpp  Intervals.cpp  Optimizer.cpp  Peephole.cpp  ProgramNodes.cpp
parser/: CMakeLists.txt
parser/bison/: cbp.lex  cbp.y
parser/include/parser/: AbstractNodes.h  ExprNodes.h  Helper.h  ProgramNodes.h
parser/include/symboltable/: ConstantDef.h  Definition.h  Scope.h  StructType.h  SymbolTable.h  Type.h
parser/src/: .svnignore  ExprNodes.cpp  MsgHandler.cpp  Node.cpp  ProgramNodes.cpp  Scope.cpp  SymbolTable.cpp  Types.cpp
src/: .svnignore  Makefile  Node.h  Scope.cpp  SymbolTable.cpp  cbp.lex  cbp.y  main.cpp  main.h
vim/ftdetect/: cbp.vim
vim/syntax/: cbp.vim
win32/vs2010/: CompilerBP.sln  CompilerBP.vcxproj  CompilerBP.vcxproj.filters
